# backend

./: Cargo.toml  LICENSE  README.md  Rocket.toml  rustfmt.toml
src/: main.rs
src/controllers/: category.rs  client.rs  clients.rs  mod.rs  product.rs  request.rs  support.rs  user.rs  users.rs
src/database/: connection.rs  mod.rs  schema.rs
src/database/migrations/2020-11-23-191941_create_users/: up.sql
src/database/migrations/2020-11-23-193215_create_clients/: down.sql  up.sql
src/database/migrations/2020-11-23-194730_create_requests/: down.sql  up.sql
src/database/migrations/2020-11-23-195534_create_categories/: down.sql  up.sql
src/database/migrations/2020-11-23-195700_create_products/: up.sql
src/database/migrations/2020-11-23-202716_create_products_categories/: down.sql  up.sql
src/database/migrations/2020-11-23-203850_create_requests_products/: down.sql  up.sql
src/models/: category.rs  client.rs  mod.rs  product.rs  product_category.rs  request.rs  request_product.rs  support.rs  user.rs
src/tests/: category.rs  client.rs  mod.rs  product.rs  request.rs  support.rs  user.rs
