[package]
name = "backend"
version = "0.1.0"
authors = ["SeraphyBR <luisjuniorbr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
chrono = "0.4.19"
uuid = "0.8.1"